# codicejuridico

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
Img/: codicejuridico.drawio
container/: Dockerfile
experiments/: VectorDB_Implementation.ipynb  VectorDb_Experiments.ipynb  pyproject.toml
src/Application/v1/Controllers/: __init__.py  vectorController.py
src/Application/v1/Services/: vectorStoreService.py
src/Core/: __init__.py  config.py  server.py
src/Core/Database/: __init__.py  vectorDb.py
src/Core/Dependencies/: logging.py
src/Core/Enums/: __init__.py  vectorStores.py
src/Core/Schemas/Requests/: CreateUpdateIndex.py  __init__.py  updateIndex.py
src/Core/models/embedders/: GeminiEmbedder.py
