[tool.poetry]
name = "codicejuridico"
version = "0.1.0"
description = "Aplicação voltada para o Estudo de Soluções de Inteligência Artificial."
authors = ["evertonmsimoes <evertonmsf@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.32.1"
pydantic = "^2.10.3"
python-dotenv = "^1.0.1"
fastapi = "^0.115.6"
pydantic-settings = "^2.6.1"
llama-index-llms-gemini = "^0.4.1"
llama-index = "^0.12.5"
weaviate = "^0.1.2"
numpy = "^1.24"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
